adds a message and draws face

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,69 @@
 <!DOCTYPE html>
+<!--
+                  _.---._
+              _.-(_o___o_)
+              )_.'_     _'.
+            _.-( (_`---'_) )-._
+          .'_.-'-._`"""`_.-'-._'.
+          /` |    __`"`__    | `\
+         |   | .'`  ^:^  `'. |   |
+         )'-.//      |      \\.-'(
+        /   //       |       \\   \
+        \   |=======.=.=======|   /
+         )`-|      ( R )      |-'(
+         \  \======/-\'\======/  /
+          \,=(    &lt;_/;\_|    )=,/
+          /  -\      |      /-  \
+          | (`-'\    |    /'-`) |
+          \\_`\  '.__|__.'  /`_//
+            /     /     \     \
+           /    /`       `\    \
+          /_,="(           )"=,_\
+          )-_,="\         /"=,_-(
+           \    (         )    /
+            \    |       |    /
+             )._ |       | _.(
+         _.-'   '/       \'   '-._
+        (__,'  .'         '.  ',__)
+           '--`             `--'
+
+HAPPY BIRTHDAY gja! :D
+
+-->
 <html>
 <head>
-	<title>FooBar!</title>
+	<title>Happy Birthday gja!</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Neucha" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<script type="text/javascript">
+	console.log("Happy Birthday Tejasva! :D");
+</script>
 <body>
-<div class="img-container">
-	<img class="ninja" src="images/ninja.png">
+<header class="banner">
+	<!-- <div class="thread"></div> -->
+</header>
+<h1>Happy Birthday Tejas! :D<span class="blink-line">|</span></h1>
+
+<div class="face">
+	<div class="hair">	</div>
+	<div class="specs">
+		<div class="frame-1">
+			<div class="eye-1">
+				<div class="eye-ball"></div>
+			</div>
+		</div>
+		<span class="frame-connector"></span>
+		<div class="frame-2">
+			<div class="eye-2">
+				<div class="eye-ball"></div>
+			</div>
+		</div>
+	</div>
+	<div class="mouth"> </div>
+	<div class="small-goatee"></div>
 </div>
-<h1>Happy Birthday Tejas! <span>|</span></h1>
+<footer></footer>
 </body>
 </html>
